[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-support-ticket-triage"
version = "1.0.0"
description = "OpenEnv environment for customer support ticket triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "openai>=1.14.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "openenv-core>=0.1.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["environment", "server"]
